2005-01-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (ReadTIFFImage): Re-wrote TIFF reading code again
	for more flexibility and performance.

2005-01-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Remove --disable-lzw option and HasLZW define.
	LZW support is always enabled now.

2005-01-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tga.c (WriteTGAImage): Incorported patch from Stefan
	v. Wachter to enable writing grayscale images as well as adding
	more image type option smarts.
	* coders/psd.c (ReadPSDImage): Fix stack overflow vulnerability
	reported by Andrei Nigmatulin. See http://lwn.net/Articles/119713/
	for details.

2005-01-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* win2k/IMDisplay/IMDisplayDoc.cpp (DoReadImage): Ensure that image
	is in RGB color space after being read since this is what Windows
	expects.

2005-01-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (ReadTIFFImage): Handle extra samples in scanline
	TIFFs.

2005-01-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/image.c (DescribeImage): Report statistics for a virtual
	gray channel for grayscale images rather than discrete red, green,
	and blue.
	* PerlMagick/Makefile.nt: JNG and JP2 to test list.
	* configure.ac: Changed --without-fpx to --with-fpx due to
	decision to default FlashPIX to 'no'.  FlashPIX library is not
	very portable and is only known to work properly under SPARC
	Solaris and Windows.
	* NEWS: Updated with latest news.
	* lcms: Updated to LCMS 1.14.

2005-01-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/jp2.c (ReadJP2Image): Handle images in YCBCR colorspace.
	(ReadJP2Image): Retrieve and store an ICC ICM color profile if
	present.
	* PerlMagick/t/tiff/read.t: Added test for reading truecolor
	planar TIFF image.
	Added test for reading 32-bit TrueColor TIFF image.
	Added test for reading 32-bit grayscale TIFF image.