@@ -207,6 +207,7 @@ MAGICK_INCLUDE_HDRS = \
 	magick/module.h \
 	magick/monitor.h \
 	magick/montage.h \
+	magick/operator.h \
 	magick/paint.h \
 	magick/profile.h \
 	magick/quantize.h \
