@@ -1,5 +1,9 @@
 2005-01-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* magick/color.c (IsPaletteImage): Fix memory leak reported by
+	Stefan v. Wachter <svwa-dev@mnet-online.de>.
+	* magick/Makefile.am (MAGICK_INCLUDE_HDRS): Needed to install
+	magick/operator.h.
 	* coders/tiff.c (ReadTIFFImage): Re-wrote TIFF reading code again
 	for more flexibility and performance.
 
@@ -10,7 +14,7 @@
 
 2005-01-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
-	* coders/tga.c (WriteTGAImage): Incorported patch from Stefan
+	* coders/tga.c (WriteTGAImage): Incorporated patch from Stefan
 	v. Wachter to enable writing grayscale images as well as adding
 	more image type option smarts.
 	* coders/psd.c (ReadPSDImage): Fix stack overflow vulnerability
